# file

./: .env.example  pyproject.toml
file/: main.py  s3_manager.py
file/config/: settings.py
file/core/: controller.py  core_module.py  helpers.py
file/decorators/: validate_token.py
file/grpc_server/: module.py  service.py
file/grpc_server/schemas/: file_schema.py
file/http_server/: controller.py  module.py  service.py
file/interceptors/: response_interceptor.py
file/postgres/: engine.py
file/proto/auth/: auth.proto  auth_pb2.py  auth_pb2.pyi  auth_pb2_grpc.py
file/proto/file/: file.proto  file_pb2.py  file_pb2.pyi  file_pb2_grpc.py
